html backbone done for index

--- a/Smart Boss/index.html
+++ b/Smart Boss/index.html
@@ -23,20 +23,18 @@
             <li><a href="about.html">About US</a></li>
           </ul>
         </div>
-      </nav>
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
-                    <div class="left-sidebar">
-                    </div>
-                </div>
-
-                <div class="col-sm-9 padding-right">
-                </div>
-            </div>
-        </div>
-    </section>
+    </nav>
+    <main>
+        <section>
+            <h1>Login</h1>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required></br>
+            <label for="pass">Password:</label>
+            <input type="password" id="pass" name="pass"></br>
+            <button type="submit">Login</button>
+            <a href="signup.html">New? Sign up here</a>
+        </section>
+    </main>
     <footer id="footer">
     </footer>
     </body>
