moved and changed script stuff in all files

--- a/Smart Boss/index.html
+++ b/Smart Boss/index.html
@@ -4,8 +4,8 @@
     <title>Fusion Outfits</title> 
     <link href="bootstrap.min.css" rel="stylesheet">
 	<link href="style1.css" rel="stylesheet">
-    <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+    <script src="jquery.js"></script>
+	<script src="bootstrap.min.js"></script>
 
 </head>
 <!--/body-->    
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="" /></a>
+            <a class="navbar-brand" href="index.html"><img src="1.jpg" alt="" /></a>
 
           </div>
           <ul class="nav navbar-nav">
