removed help footer

--- a/Smart Boss/help.html
+++ b/Smart Boss/help.html
@@ -29,36 +29,8 @@
         </p>  
     	</div>	
     </div>
-        <footer id="footer">
-        <!--Footer-->
-
-        <div class="footer-widget">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="single-widget">
-                            <ul class="nav nav-pills nav-stacked">
-                                <li><a href="about.html">Online Help</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-2">
-                        <div class="single-widget">
-                            <ul class="nav nav-pills nav-stacked">
-                                <li><a href="cart.html">Order Status</a></li>
-                                <li><a href="#">Change Location</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!--/Footer-->
-    
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="jquery.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 
 </html>
