--- a/Smart Boss/about1.html
+++ b/Smart Boss/about1.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img src="1.jpg" alt="" /></a>
+            <a class="navbar-brand" href="index.html"><img src="1.jpg" alt="" height=75px width=75px/></a>
           </div>
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
