--- a/Smart Boss/help.html
+++ b/Smart Boss/help.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Home page</title>
+    <title>Help page</title>
 
  
     <link href="bootstrap.min.css" rel="stylesheet">
