--- a/Smart Boss/help.html
+++ b/Smart Boss/help.html
@@ -18,7 +18,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact US</a></li>
-            <li class="active"><a href="about.html">About US</a></li>
+            <li class="active"><a href="about1.html">About US</a></li>
           </ul>
         </div>
       </nav>
