--- a/Smart Boss/help.html
+++ b/Smart Boss/help.html
@@ -24,7 +24,7 @@
 
 	  <div id="contact-page" class="container">
     	<p>
-            If you want a summary about what this website is about, click on the home tab. The home page will allow you to either sign up or sign in. If you want to contact the makers of this site, click on the "Contact Us" tab. If you want to know more about this website and its creaters, click on the "About Us" tab. 
+            If you want a summary about what this website is about, click on the home tab. The home page will allow you to either sign up or sign in. If you want to know more about this website and its creaters, click on the "About Us" tab. 
         </p>  
     	</div>	
     </div>
