--- a/Smart Boss/index.html
+++ b/Smart Boss/index.html
@@ -19,20 +19,22 @@
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact US</a></li>
-            <li><a href="about.html">About US</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="help.html">Help</a></li>
           </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <h1>Login</h1>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required></br>
-            <label for="pass">Password:</label>
-            <input type="password" id="pass" name="pass"></br>
-            <button type="submit">Login</button>
-            <a href="signup.html">New? Sign up here</a>
+        <section id="login">
+            <div>
+                <h1>Login</h1>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required></br>
+                <label for="pass">Password:</label>
+                <input type="password" id="pass" name="pass"></br>
+                <button type="submit">Login</button>
+                <a href="signup.html">New? Sign up here</a>
+            </div>
         </section>
     </main>
     <footer id="footer">
