css for login page

--- a/Smart Boss/index.html
+++ b/Smart Boss/index.html
@@ -1,7 +1,7 @@
 <html>
 <!--/Product Details page-->  
 <head>
-    <title>Fusion Outfits</title> 
+    <title>Smart Boss</title> 
     <link href="bootstrap.min.css" rel="stylesheet">
 	<link href="style1.css" rel="stylesheet">
     <script src="jquery.js"></script>
@@ -26,13 +26,19 @@
     </nav>
     <main>
         <section id="login">
+            <h1>Login</h1>
             <div>
-                <h1>Login</h1>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required></br>
+            </div>
+            <div>
                 <label for="pass">Password:</label>
                 <input type="password" id="pass" name="pass"></br>
-                <button type="submit">Login</button>
+            </div>
+            <div>
+                <button type="submit">Login</button></br>
+            </div>
+            <div>
                 <a href="signup.html">New? Sign up here</a>
             </div>
         </section>
