--- a/Smart Boss/help.html
+++ b/Smart Boss/help.html
@@ -17,7 +17,7 @@
           </div>
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about1.html">About US</a></li>
+            <li class="active"><a href="about.html">About US</a></li>
           </ul>
         </div>
       </nav>
